<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.karen.medappjam1.newUser">
    
    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingBottom="30dp"
        android:text="Fill in the information below:"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_below="@+id/first_name" />
    
    <EditText
        android:id= "@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@+id/last_name"/>

    <EditText
        android:hint="@string/phoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumber"
        android:inputType="phone"
        android:layout_below="@+id/email" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"
        android:layout_below="@+id/instruction"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="18sp"
        android:layout_below="@+id/phoneNumber" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="18sp"
        android:layout_below="@+id/username"
        android:inputType="textPassword"/>

    <Button
        android:text="Sign up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:id="@+id/button"
        android:onClick="signUp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verificationCode"
        android:layout_below="@+id/verificationCodeText" />

    <TextView
        android:text="Verification Code:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verificationCodeText"
        android:textSize="18sp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/anything"
        android:textSize="18sp"
        android:layout_below="@+id/button"/>


</RelativeLayout>
